Add account sections and update new test section

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,12 +60,8 @@ a.navbar-brand {
     padding-left: 5px;
     padding-right: 5px;
   }
-  @media (max-width: 392px) {
-    i {
-      display: none;
-    }
-    font-size: 14px;
-    padding-top: 22px;
+  @media (max-width: 399px) {
+    display: none;
   }
 }
 .label-danger {
@@ -74,6 +70,9 @@ a.navbar-brand {
 
 .navbar-nav > li > a:hover {
   color: #EDEDED !important;
+}
+.navbar-nav .open .dropdown-menu > li > a:hover {
+  color: #EDEDED !important;  
 }
 
 footer {
