--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,10 +34,16 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <%= link_to root_path do %>
-	        <%= image_tag 'cdl-logo-small-white.png', class: "navbar-brand" %>
-	      <% end %>
-	      <%= link_to 'CDL Study Guide and Practice Tests', :study_and_practice, class: "navbar-brand" %>
+	      <% if user_signed_in? %>
+		      <%= link_to :dashboard do %>
+		        <%= image_tag 'cdl-logo-small-white.png', class: "navbar-brand" %>
+		      <% end %>
+		    <% else %>
+		      <%= link_to root_path do %>
+		        <%= image_tag 'cdl-logo-small-white.png', class: "navbar-brand" %>
+		      <% end %>
+		      <%= link_to 'CDL Study Guide and Practice Tests', :study_and_practice, class: "navbar-brand" %>
+		    <% end %>
 	    </div>
 	    <div class="navbar-collapse collapse" id="navbar">   
 	      
@@ -47,7 +53,7 @@
 		          <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">My Account <span class="caret"></span></a>
 		          <ul class="dropdown-menu" aria-labelledby="download">
 	              <%#= link_to 'My Profile', user_path(current_user) %>
-	              <li><%= link_to 'My Account', tests_path %></li>
+	              <li><%= link_to 'My Account', :dashboard %></li>
 		            <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
 		            <li class="divider"></li>
 		            <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
