--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,30 @@
-<h2>Forgot your password?</h2>
+<div class="row text-center">
+  <h2>Forgot your password?</h2>
+</div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+    <div class="well bs-component">
+			<div class="form-horizontal">
+			  <div class="fieldset">
+					<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+					  <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+					  <div class="form-group">
+					    <%= f.label :email, class: "col-md-2 control-label" %>
+					    <div class="col-md-8">
+					      <%= f.email_field :email, autofocus: true, class: "form-control" %>
+					    </div>
+					  </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+	          <div class="form-group">
+						  <div class="col-md-8 col-md-offset-2">
+						    <%= f.submit "Send me reset password instructions", class: "btn btn-primary btn-block" %>
+						  </div>
+						</div>
+					<% end %>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
