--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -230,6 +230,21 @@ a.other-packages {
   color: #000;
   padding: 5px;
   overflow: auto;
+  a {
+    span {
+      color: #000;
+      float: left;
+      margin-left: -50px;
+      text-decoration: line-through;
+      @media (max-width: 470px) and (min-width: 441px) {
+        display: none;
+      }
+      @media (max-width: 440px) {
+        margin-left: 0;
+        margin-right: 10px;
+      }
+    }
+  }
   a.price-block {
     display: block;
     overflow: auto;
