--- a/app/views/pages/success.html.erb
+++ b/app/views/pages/success.html.erb
@@ -18,7 +18,5 @@
 	</div>
 <% else %>
   Oops! It looks like there was a mistake. Taking you back to civilization.
-  <script type="text/javascript">
-    window.location.href="<%= root_url %>"
-  </script>
+  <%= URI.parse(request.env["HTTP_REFERER"]).host %>
 <% end %>
