Paypal final change

--- a/app/views/pages/success.html.erb
+++ b/app/views/pages/success.html.erb
@@ -18,6 +18,7 @@
 	</div>
 <% else %>
   Oops! It looks like there was a mistake. Taking you back to civilization.
-  <%= request.referrer %>
-  <%#= URI.parse(request.env["HTTP_REFERER"]).host %>
+  <script type="text/javascript">
+     window.location.href="http://www.cdlstudyguidehq.com/"
+  </script>
 <% end %>
