--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -114,22 +114,24 @@
   </div>
 </div>
 
-<h1>Debug Stuff Below</h1>
+<% if current_user.admin %>
+  <h1>Debug Stuff Below</h1>
 
-<% @tests.includes(:attempts).each do |test| %>
-  <h3><%= test.name %></h3>
-  <p><% if active_attempts(current_user, test).any? && last_attempt_in_progress(current_user, test) %>
-    <%= link_to "Resume this test", attempt_path(last_attempt(current_user, test).id), class: "btn btn-success" %> or 
-    <%= link_to 'Start over', test_question_path(test.id, test.questions.first.id), class: "clear-score btn btn-info" %>
-  <% else %>
-    <%= link_to raw('Start the test <i class="fa fa-angle-double-right"></i>'), test_question_path(test.id, test.questions.first.id), class: "clear-score btn btn-info" %>
-  <% end %></p>
+  <% @tests.includes(:attempts).each do |test| %>
+    <h3><%= test.name %></h3>
+    <p><% if active_attempts(current_user, test).any? && last_attempt_in_progress(current_user, test) %>
+      <%= link_to "Resume this test", attempt_path(last_attempt(current_user, test).id), class: "btn btn-success" %> or 
+      <%= link_to 'Start over', test_question_path(test.id, test.questions.first.id), class: "clear-score btn btn-info" %>
+    <% else %>
+      <%= link_to raw('Start the test <i class="fa fa-angle-double-right"></i>'), test_question_path(test.id, test.questions.first.id), class: "clear-score btn btn-info" %>
+    <% end %></p>
 
-  <div class="well">Admin Stuffs, remove later
-  <%= link_to 'Edit', edit_test_path(test) %> | <%= link_to 'Destroy', test, method: :delete, data: { confirm: 'Are you sure?' } %>
-  </div>
+    <div class="well">Admin Stuffs, remove later
+    <%= link_to 'Edit', edit_test_path(test) %> | <%= link_to 'Destroy', test, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </div>
+  <% end %>
+
+  <br>
+
+  <%= link_to 'New Test', new_test_path, data: { no_turbolink: true }, class: "btn btn-success" %>
 <% end %>
-
-<br>
-
-<%= link_to 'New Test', new_test_path, data: { no_turbolink: true }, class: "btn btn-success" %>
