--- a/app/views/pages/class_a_endorsement.html.erb
+++ b/app/views/pages/class_a_endorsement.html.erb
@@ -39,26 +39,6 @@
 			<h5><i class="fa fa-arrow-right"></i> Hazardous Material</h5>
 			<h5><i class="fa fa-arrow-right"></i> Passenger</h5>
 			<h5><i class="fa fa-arrow-right"></i> School Bus</h5>
-
-			<!-- <ol class="main-list">
-			  <strong><li>General Knowledge</li></strong>
-			    <ol class="inner-list">
-						<li>Section 1: Introduction
-						<li>Section 2: Driving Safely
-						<li>Section 3: Transporting Cargo Safely
-						<li>Section 11: Pre-Trip Vehicle Inspection Test
-						<li>Section 12: Basic Vehicle Control Skills Test
-						<li>Section 13:  On-Road Driving
-					</ol>
-			  <strong><li>Air brake</li></strong>
-			    <ol class="inner-list">
-			      <li>Section 5: Air Brakes
-			    </ol>
-			  <strong><li>Combination Vehicles</li></strong>
-			    <ol class="inner-list">
-			      <li>Section 6: Combination Vehicles
-			    </ol>
-			</ol> -->
 		</div>
 		<div class="col-sm-6 video">
 		  <div class="videoWrapper">
@@ -168,3 +148,4 @@
 			</div>
 		</div>
 	</div>
+	<%= render partial: "instructions" %>
