--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -113,7 +113,7 @@
 	          <%= link_to "Class A + All Endorsements", :class_a_endorsement, class: "h4" %>
 	          <p>(Study Guide + 468 Practice Questions)</p>
 	        </div>
-	        <div class="col-xs-2 col-xxs-12"><%= link_to "$47", :class_a_endorsement %></div>
+	        <div class="col-xs-2 col-xxs-12"><%= link_to raw("<span>$94</span> $47"), :class_a_endorsement %></div>
 	      </div>
 	      <div class="package-and-price">
 	        <div class="col-xs-10 col-xxs-12">
