--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -161,3 +161,9 @@ legend {
   font-size: 12px;
   margin-top: -20px;
 }
+
+// Hiden password confirmatino on signup
+
+.hidden-field-group {
+  display: none;
+}
