--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -5,14 +5,14 @@
       <div class="form-group">
         <%= f.label :name, class: "col-md-4 control-label" %>
         <div class="col-md-8">
-          <%= f.text_field :name, autofocus: true, required: true, class: "form-control" %>
+          <%= f.text_field :name, autofocus: true, required: true, placeholder: "Full Name", class: "form-control" %>
         </div>
       </div>
 
       <div class="form-group">
         <%= f.label :email, class: "col-md-4 control-label" %>
         <div class="col-md-8">
-          <%= f.email_field :email, required: true, class: "form-control" %>
+          <%= f.email_field :email, pattern: "[a-zA-Z0-9._\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}", required: true, title: "Please enter a valid email address", placeholder: "your-email@example.com", class: "form-control" %>
         </div>
       </div>
 
@@ -20,23 +20,15 @@
 
       <div class="form-group">
         <%= f.label :password, class: "col-md-4 control-label" %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %>
         <div class="col-md-8">
-          <%= f.password_field :password, autocomplete: "off", required: true, class: "form-control" %>
+          <%= f.password_field :password, autocomplete: "off", pattern: ".{6,}", required: true, title: "6 or more characters", placeholder: "6 or more characters", class: "form-control" %>
         </div>
       </div>
 
       <div class="form-group">
-        <%= f.label :password_confirmation, class: "col-md-4 control-label" %>
-        <div class="col-md-8">
-          <%= f.password_field :password_confirmation, autocomplete: "off", required: true, class: "form-control" %>
+        <div class="col-md-8 col-md-offset-4">
+          <%= f.submit "CREATE MY ACCOUNT!", class: "btn btn-primary btn-block" %>
         </div>
-      </div>
-
-      <div class="col-md-8 col-md-offset-4">
-        <%= f.submit "LET ME IN", class: "btn btn-primary btn-block" %>
       </div>
 
     <% end %>
