--- a/app/views/tests/study_guides/_ishm.html.erb
+++ b/app/views/tests/study_guides/_ishm.html.erb
@@ -1,3 +1,3 @@
 <%= render partial: "tests/head_study", locals: { type: "Hazardous Materials Endorsement Study Guide" } %>
 
-<%= render partial: "tests/study_guides/guide", locals: { url: "#" } %>
+<%= render partial: "tests/study_guides/guide", locals: { url: "https://s3-us-west-2.amazonaws.com/cdlhq/study_guides/UltimateCDLStudyGuide+-+Hazardous+Materials.pdf" } %>
