--- a/app/views/pages/success.html.erb
+++ b/app/views/pages/success.html.erb
@@ -24,7 +24,9 @@
 	</div>
 <% else %>
   Oops! It looks like there was a mistake. Taking you back to civilization.
+  You came from: 
+  <%= request.env["HTTP_REFERER"] %>
   <script type="text/javascript">
-    window.location.href="http://www.cdlstudyguidehq.com/"
+    //window.location.href="http://www.cdlstudyguidehq.com/"
   </script>
 <% end %>
