--- a/app/views/tests/study_guides/_guide.html.erb
+++ b/app/views/tests/study_guides/_guide.html.erb
@@ -1,3 +1,4 @@
 <div class="well">
   <%= link_to "Download Your Study Guide", "#{url}", class: "btn btn-primary" %>
+  <h4>Right click and select "Save as" to download</h4>
 </div>
