--- a/app/views/tests/practice_tests/_ithm.html.erb
+++ b/app/views/tests/practice_tests/_ithm.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: "tests/head_practice", locals: { type: "Hazardous Materials Endorsement Practice Tests" } %>
 
 <% @tests.includes(:attempts).each do |test| %>
-	<% if ["9"].include?(test.code) %>
+	<% if [9].include?(test.code) %>
 		<%= render partial: "tests/practice_tests/test", object: test %>
 	<% end %>
 <% end%>
