Add user mailer

--- a/app/views/contact_message_mailer/contact_us.html.erb
+++ b/app/views/contact_message_mailer/contact_us.html.erb
@@ -1,15 +1,18 @@
 <p>Hi bossman,</p>
 
-<p>
-  <%= @message %>
-</p>
+<p>Below is the contact message:</p>
+
+==============
 
 <p>
 	<strong>From:</strong> <%= @name %> (<%= @email %>)
 </p>
 
 <p>
-  Thanks,
+  <%= @message %>
 </p>
 
-  <h3>CDLBot</h3>
+==============
+
+<p>Thanks,<br/>
+CDLBot</p>
