--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -177,7 +177,7 @@
   		sweetAlert("Please choose your state first.");
   	} else {
   		var state = $('#your-state :selected').text();//.replace(/\s+/g, '-').toLowerCase();
-  		window.location = '<%= study_and_practice_url %>?state=' + state;
+  		window.location = '<%= class_a_endorsement_url %>?state=' + state;
   		// window.location = '<%= root_url %>#' + state + '-cdl-study-guide';
   	}
   })
