--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -229,12 +229,20 @@
                   <tr>
                      <td width="100%">
                         <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
+                            <tbody>
+                              <tr>
+                                 <td align="center">
+                                    <img src="https://s3-us-west-2.amazonaws.com/cdlhq/email/blank.png" width="600" border="0" alt="" border="0" style="display:block; border:none; outline:none; text-decoration:none;">
+                                 </td>
+                              </tr>
+                           </tbody>
                            <tbody>
                               <!-- Spacing -->
                               <tr>
                                  <td width="100%" height="20"></td>
                               </tr>
                               <!-- Spacing -->
+
                               <tr>
                                  <td align="center" valign="middle" style="font-family: Helvetica, arial, sans-serif; font-size: 13px;color: #ffffff">
                                      
