--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -10,4 +10,4 @@
 
 <hr />
 
-<%= link_to "<< Back to Tests", tests_path, class: "btn btn-success" %>
+<%= link_to "<< Back to My Account", dashboard_path, class: "btn btn-success" %>
