--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -22,7 +22,10 @@
 	  margin: 0 auto;
 	}
 }
-
+.main-product-image-home {
+  max-width: 450px; 
+  margin: 10px 0; 
+}
 h1.home {
 	color: #5F7989;
   font-size: 24px;
