--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 	  ga('send', 'pageview');
   </script>
 </head>
-<body <% if user_signed_in? %>class="account-body"<% end %>>
+<body<% if user_signed_in? %> account-body data-no-turbolink="true"<% end %>>
   <div class="navbar navbar-default navbar-static-top">
 	  <div class="container">
 	    <div class="navbar-header">
