--- a/app/views/tests/edit.html.erb
+++ b/app/views/tests/edit.html.erb
@@ -55,7 +55,7 @@
       </div>
     <div class="form-group">
       <div class="col-md-8 col-md-offset-2">
-        <%= f.submit "Create Test", class: "btn btn-primary btn-block" %>
+        <%= f.submit "Update Test", class: "btn btn-primary btn-block" %>
       </div>
     </div>
   <% end %>
