--- a/app/assets/stylesheets/cdl-test.scss
+++ b/app/assets/stylesheets/cdl-test.scss
@@ -6,7 +6,7 @@ body.cdl-test {
 .container__cdl-test {
 	background: #FFF;
 	color: #222;
-	max-width: 960px;
+	width: 960px;
 }
 .cdl-test__h1 {
   color: #bc0707;
